# uncrustify_actions

./: CMakeLists.txt  README.md  json.cpp  json_builder.cpp  json_builder.hpp  main.cpp  my_script.sh  uncrustify.cfg
.github/workflows/: needs.yml  uncrustify-check.sh  uncrustify-check.yml
include/json/: json.hpp
src/json/: json.cpp
